# workflows

./: README.md  WorkflowScript.py  mac-cli-setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  issue.md  user-story.md
analysis-tools/: Notebook.ipynb  pyproject.toml
scripts/: install-vm.sh
trim-and-blast/: 2025-05-23-trim-and-blast.geneiousWorkflow  2025-05-27-trim-and-blast.geneiousWorkflow  FHU-Bioinfo-DoubleBlast.geneiousWorkflow  FHU-Bioinfo-Filtered.geneiousWorkflow  FHU-Bioinfo.geneiousWorkflow  trim-and-blast.geneiousWorkflow
